# BEAM-opop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.omo/notepads/coip-agent-loop-framework/: decisions.md  issues.md  learnings.md
.omo/plans/: coip-agent-loop-framework.md
benchmarks/: .gitignore  registry.yaml
configs/: phase1_smoke.yaml
docs/: api.md  architecture.md  howto-add-problem-class.md  howto-add-solver.md  howto-add-surrogate.md
docs/design/: solver-stack.md
docs/paper/: paper.md
docs/paper/tables/: ablation_cross.md  thesis_verdicts.md
docs/tech-report/: architecture.md  introduction.md  methodology.md  reproducibility.md  results.md
docs/tech-report/tables/: ablation_cross.md  cross_distribution.md  thesis_verdicts.md
examples/: expansion_miqp.py  phase1_smoke.py
scripts/: check_numbers.py  claims_audit.py  make_paper.py  make_report.py
src/opop/: __init__.py  cli.py  config.py  replay.py  run.py
src/opop/analyzer/: __init__.py  api.py  benders_dw.py  consistency.py  decompose.py  lagrangian.py  redundancy.py  relaxation.py  report.py  symmetry.py  valid_inequalities.py
src/opop/bench/: audit.py  audit_leakage.py  cleaning.py  cost.py  registry.py
src/opop/controller/: acquisition.py  botorch_rungs.py  encoder.py  fidelity.py  gp.py  ladder.py  meta.py  phase1.py  protocol.py  transfer.py
src/opop/eval/: __init__.py  compare.py  fidelity_correlation.py  theses.py
src/opop/evaluator/: __init__.py  censoring.py  evaluator.py  metrics.py
src/opop/experiments/: __init__.py  __main__.py  audit_gate.py  baselines.py  baselines_34.py  baselines_56.py  compare.py  driver.py  fairness.py  heuristic_selector.py  matrix.py  modeling_agent.py  runner.py
src/opop/leaderboard/: __init__.py  __main__.py  builder.py  submit.py
src/opop/llm/: __init__.py  client.py
src/opop/model/: __init__.py  adapter.py  ir.py  minlp.py  quadratic.py  state.py
src/opop/orchestrator/: __init__.py  events.py  loop.py  repro.py  result.py
tests/: conftest.py  test_config.py  test_public_api.py  test_smoke_example.py
tests/analyzer/: test_analyzer.py  test_decompose.py  test_expansion.py
tests/bench/: test_classic_co.py  test_cleaning.py  test_leakage.py  test_milp_suites.py  test_modeling_agents.py  test_phase1_set.py  test_qplib.py  test_registry.py
tests/controller/: test_gp.py  test_ladder.py  test_mf.py  test_phase1.py  test_transfer.py
tests/docs/: test_paper.py  test_tech_report.py
tests/evaluator/: test_metrics.py
tests/experiments/: test_baselines_12.py  test_baselines_34.py  test_baselines_56.py  test_compare.py  test_driver.py  test_leaderboard.py  test_matrix.py  test_run.py  test_theses.py
tests/llm/: test_client.py
tests/model/: test_ir.py  test_minlp.py  test_quadratic.py  test_state.py
tests/orchestrator/: test_loop.py  test_repro.py
tests/proposer/: __init__.py  test_families.py  test_proposer.py
tests/solver/: __init__.py  conftest.py  test_availability.py  test_cbc.py  test_cpsat.py  test_gcg.py  test_heuristics.py  test_highs.py  test_scip.py
tests/verify/: test_gate.py
(+65 files in other folders)
